--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           resultado.innerHTML = `
             <div class="alert alert-success" role="alert">
               <strong>Nome:</strong> ${nomeDigitado}<br>
-              <strong>Certificações:</strong><br>
+              <strong>CERTIFICADO VÁLIDO!</strong><br><strong>Certificações:</strong><br>
               <ul>${[...certificacoes].map(cert => `<li>${cert}</li>`).join('')}</ul>
             </div>`;
         } else {
